Finished basic project settings

--- a/.gitignore
+++ b/.gitignore
@@ -83,13 +83,13 @@ crashlytics-build.properties
 *.pydevproject
 .metadata
 .gradle
-#bin/
+bin/
 tmp/
 *.tmp
 *.bak
 *.swp
 *~.nib
-#local.properties
+local.properties
 .settings/
 .loadpath
 
