--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         android:theme="@style/FinestWebViewTheme.Light"/>
 
     <activity android:name=".WebViewActivity"/>
+    <activity android:name=".TestActivity"/>
   </application>
 
 </manifest>
