--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: './gradle/dependencies.gradle'
 
 buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.3'
-    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-    classpath 'com.novoda:bintray-release:0.3.4'
-  }
+    apply from: './gradle/dependencies.gradle'
+
+    repositories {
+        jcenter()
+        google()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:' + versions.gradlePlugin
+        classpath 'com.novoda:bintray-release:' + versions.bintrayRelease
+    }
 }
 
 allprojects {
-  repositories {
-    jcenter()
-  }
-}
-
-task clean(type: Delete) {
-  delete rootProject.buildDir
-}
-
-ext {
-  minSdkVersion = 7
-  targetSdkVersion = 23
-  compileSdkVersion = 23
-  buildToolsVersion = '23.0.3'
-
-  sourceCompatibility = JavaVersion.VERSION_1_7
-  targetCompatibility = JavaVersion.VERSION_1_7
-
-  versionCode = 9
-  versionName = '1.2.7'
-
-  supportLibVersion = '24.1.1'
-  playLibVersion = '8.4.0'
+    repositories {
+        jcenter()
+        google()
+    }
 }
