--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,44 +1,48 @@
+apply from: '../gradle/dependencies.gradle'
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
-  buildToolsVersion rootProject.ext.buildToolsVersion
-
-  defaultConfig {
-    applicationId "com.thefinestartist.finestwebview.sample"
-    minSdkVersion rootProject.ext.minSdkVersion
-    targetSdkVersion rootProject.ext.targetSdkVersion
-    versionCode rootProject.ext.versionCode
-    versionName rootProject.ext.versionName
-    vectorDrawables.useSupportLibrary = true
-    multiDexEnabled true
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    compileSdkVersion versions.compileSdk
+    buildToolsVersion versions.buildTools
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-  }
+    defaultConfig {
+        applicationId "com.thefinestartist.finestwebview.sample"
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.compileSdk
+        versionCode versions.publishVersionCode
+        versionName versions.publishVersion
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:multidex:1.0.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:multidex:1.0.3'
 
-  compile project(':library')
-  //    compile "com.thefinestartist:finestwebview:${rootProject.ext.versionName}"
+    implementation project(':library')
+    //    implementation "com.thefinestartist:finestwebview:${rootProject.ext.versionName}"
 
-  compile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
-  compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-  //    compile "com.android.support:support-vector-drawable:${rootProject.ext.supportLibVersion}"
-  //    compile "com.android.support:palette-v7:${rootProject.ext.supportLibVersion}"
-  compile "com.android.support:design:${rootProject.ext.supportLibVersion}"
-  //    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
+    implementation 'com.android.support:support-annotations:' + versions.supportLib
+    implementation 'com.android.support:appcompat-v7:' + versions.supportLib
+    //    implementation 'com.android.support:support-vector-drawable:' + versions.supportLib
+    //    implementation 'com.android.support:palette-v7:' + versions.supportLib
+    implementation 'com.android.support:design:' + versions.supportLib
+    //    implementation 'com.android.support:recyclerview-v7:' + versions.supportLib
 
-  //    compile "com.google.android.gms:play-services-base:${rootProject.ext.playLibVersion}"
-  //    compile "com.google.android.gms:play-services-gcm:${rootProject.ext.playLibVersion}"
-  //    compile "com.google.android.gms:play-services-plus:${rootProject.ext.playLibVersion}"
-  //    compile "com.google.android.gms:play-services-analytics:${rootProject.ext.playLibVersion}"
-  //    compile "com.google.android.gms:play-services-location:${rootProject.ext.playLibVersion}"
-  //    compile "com.google.android.gms:play-services-maps:${rootProject.ext.playLibVersion}"
+    //    implementation 'com.google.android.gms:play-services-base:' + versions.playLib
+    //    implementation 'com.google.android.gms:play-services-gcm:' + versions.playLib
+    //    implementation 'com.google.android.gms:play-services-plus:' + versions.playLib
+    //    implementation 'com.google.android.gms:play-services-analytics:' + versions.playLib
+    //    implementation 'com.google.android.gms:play-services-location:' + versions.playLib
+    //    implementation 'com.google.android.gms:play-services-maps:' + versions.playLib
 }
