--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,15 +1,18 @@
 ext.versions = [
-        minSdk            : 14,
-        compileSdk        : 27,
-        buildTools        : '27.0.3',
+        minSdk              : 14,
+        compileSdk          : 28,
+        buildTools          : '28.0.3',
 
-        gradlePlugin      : '3.1.2',
-        bintrayRelease    : '0.8.1',
-        kotlin            : '1.2.40',
+        gradlePlugin        : '3.2.1',
+        bintrayRelease      : '0.9',
+        kotlin              : '1.3.11',
 
-        publishVersion    : '1.2.7',
-        publishVersionCode: 9,
+        publishVersion      : '1.2.7',
+        publishVersionCode  : 9,
 
-        supportLib        : '27.1.1',
-        playLib           : '27.1.1',
+        supportLib          : '28.0.0',
+        multidex            : '1.0.3',
+        playLib             : '27.1.1',
+        nineoldandroids     : '2.4.0',
+        thefinestartist     : '0.9.5'
 ]
