--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,7 +27,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:multidex:' + versions.multidex
 
     implementation project(':library')
     //    implementation "com.thefinestartist:finestwebview:${rootProject.ext.versionName}"
