--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,5 +1,5 @@
-apply from: '../gradle/dependencies.gradle'
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion versions.compileSdk
@@ -27,22 +27,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:' + versions.kotlin
+    implementation 'androidx.core:core-ktx:' + versions.coreKtx
+    implementation 'androidx.multidex:multidex:' + versions.multidex
 
     implementation project(':library')
-    //    implementation "com.thefinestartist:finestwebview:${rootProject.ext.versionName}"
 
     implementation 'com.android.support:support-annotations:' + versions.supportLib
     implementation 'com.android.support:appcompat-v7:' + versions.supportLib
-    //    implementation 'com.android.support:support-vector-drawable:' + versions.supportLib
-    //    implementation 'com.android.support:palette-v7:' + versions.supportLib
     implementation 'com.android.support:design:' + versions.supportLib
-    //    implementation 'com.android.support:recyclerview-v7:' + versions.supportLib
-
-    //    implementation 'com.google.android.gms:play-services-base:' + versions.playLib
-    //    implementation 'com.google.android.gms:play-services-gcm:' + versions.playLib
-    //    implementation 'com.google.android.gms:play-services-plus:' + versions.playLib
-    //    implementation 'com.google.android.gms:play-services-analytics:' + versions.playLib
-    //    implementation 'com.google.android.gms:play-services-location:' + versions.playLib
-    //    implementation 'com.google.android.gms:play-services-maps:' + versions.playLib
+}
+repositories {
+    mavenCentral()
 }
