--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,4 @@
-apply from: '../gradle/dependencies.gradle'
+apply from: rootProject.file('dependencies.gradle')
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
