--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.thefinestartist.finestwebview.sample">
-
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  package="com.thefinestartist.finestwebview.sample">
 
   <application
-      android:name="android.support.multidex.MultiDexApplication"
-      android:allowBackup="true"
-      android:hardwareAccelerated="true"
-      android:icon="@drawable/ic_launcher"
-      android:label="@string/app_name"
-      android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+    android:allowBackup="true"
+    android:hardwareAccelerated="true"
+    android:icon="@drawable/ic_launcher"
+    android:label="@string/app_name"
+    android:name="android.support.multidex.MultiDexApplication"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme"
+    android:usesCleartextTraffic="true">
     <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name">
+      android:label="@string/app_name"
+      android:name=".MainActivity">
       <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+        <action android:name="android.intent.action.MAIN" />
 
-        <category android:name="android.intent.category.LAUNCHER"/>
+        <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
 
     <activity
-        android:name="com.thefinestartist.finestwebview.FinestWebViewActivity"
-        android:configChanges="keyboardHidden|orientation|screenSize"
-        android:screenOrientation="sensor"
-        android:theme="@style/FinestWebViewTheme.Light"/>
+      android:configChanges="keyboardHidden|orientation|screenSize"
+      android:name="com.thefinestartist.finestwebview.FinestWebViewActivity"
+      android:screenOrientation="sensor"
+      android:theme="@style/FinestWebViewTheme.Light" />
 
-    <activity android:name=".WebViewActivity"/>
+    <activity android:name=".WebViewActivity" />
   </application>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+  <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
