--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,14 +27,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation project(':library')
     //    implementation "com.thefinestartist:finestwebview:${rootProject.ext.versionName}"
-
-    implementation 'com.android.support:support-annotations:' + versions.supportLib
-    implementation 'com.android.support:appcompat-v7:' + versions.supportLib
-    implementation 'com.android.support:design:' + versions.supportLib
     implementation deps.kotlin.stdlib8
+    implementation 'androidx.appcompat:appcompat:1.3.0'
 }
 repositories {
     mavenCentral()
