--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -28,9 +28,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':library')
-    //    implementation "com.thefinestartist:finestwebview:${rootProject.ext.versionName}"
+    implementation deps.androidx.appcompat
     implementation deps.kotlin.stdlib8
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    //    implementation deps.finestWebView
 }
 repositories {
     mavenCentral()
